2008-06-23  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>

	* Version 1.22.20

2008-06-23  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>

	* arch/win32/make-msvc-bindist.bat,
	arch/win32/watcom/make-watcom-bindist.bat: Added (had been
	forgotten in the previous version)

2008-06-23  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>

	* c64/reu.c: Implement the special wrap-around of the 1700 when
	it uses 64Kx1 DRAMs.  That is, the bank register behaves like
	the other REUs (with the special wrap around), but the DRAM
	access itself is limited to 0x00000-0x1ffff.

	* vdrive/vdrive_command: Changed flow in vdrive_command_memory()
	as suggested by Marco.

	* c64/tfe.c: disabled log_message() for tfe_hash_mask[], as it
	accessed memory out of bounds.

2008-06-22  Marco van den Heuvel  <blackystardust68@yahoo.com>

	* arch/amigaos/uiapi.c, arch/os2/ui.c,
	arch/unix/x11/gnome/x11ui.c, arch/unix/x11/xaw/x11ui.c: Added
	the option to choose 'continue' for the CPU JAM dailog.

	* monitor/mon_lex.c, monitor/mon_lex.l: Fixed the undump command
	as provided by M. Kiesel <mayne@users.sourceforge.net>.

	* plus4/plus4mem.c: Fixed the reported plus4 hannes/csory memory
	expansion bug for memory at $ffxx.

	* arch/unix/qnx6/make-bindist.sh,
	arch/unix/sco_sol/make-bindist.sh,
	arch/unix/skyos/make-bindist.sh: Improved some of the
	make-bindist.sh scripts.

2008-06-19  Marco van den Heuvel  <blackystardust68@yahoo.com>

	* vdrive/vdrive-internal.c, vdrive/vdrive-command.c,
	plus4/ted-mem.c, vicii/vicii-mem.c, cbmimage.c, c128/c128mem.c,
	c1541.c, fsdevice/fsdevice-open.c, pet/petmem.c: Changed around
	to get rid of unreachable code.

	* video/video-resources.c, video/video-resources.h,
	video/video-resources-pal.c: Added a check for win32, new
	PAL-mode, PAL emulation on, double size, double scan to give a
	warning about the performance problem of that combination on
	win32.

	* sid/sid-resources.c: Changed the unsigned int to int for some
	variables used in a resource-table.
